--- a/404.md
+++ b/404.md
@@ -2,7 +2,19 @@
 permalink: /404.html
 ---
 
+
+ __ __       __   __ __      
+/\ \\ \    /'__`\/\ \\ \     
+\ \ \\ \  /\ \/\ \ \ \\ \    
+ \ \ \\ \_\ \ \ \ \ \ \\ \_  
+  \ \__ ,__\ \ \_\ \ \__ ,__\
+   \/_/\_\_/\ \____/\/_/\_\_/
+      \/_/   \/___/    \/_/ 
+
+
 # 404
-## 你走错了
+## 对不起，这里没有东西
 
 点[这里](index)返回主页
+
+
